[gd_scene load_steps=16 format=3 uid="uid://dtc6owbqdlyue"]

[ext_resource type="Script" path="res://Script/archer.gd" id="1_iig5x"]
[ext_resource type="Script" path="res://addons/godot_state_charts/state_chart.gd" id="2_att5l"]
[ext_resource type="PackedScene" uid="uid://jshwrihoifgi" path="res://Scenes/archer_arrow.tscn" id="2_d1bf1"]
[ext_resource type="Texture2D" uid="uid://sywwublq6np7" path="res://Asset/Sprites/Leshy Leaf Sprite Sheet.png" id="3_h1gdg"]
[ext_resource type="Script" path="res://addons/godot_state_charts/parallel_state.gd" id="3_sdv2h"]
[ext_resource type="Script" path="res://addons/godot_state_charts/compound_state.gd" id="4_s6b1r"]
[ext_resource type="Script" path="res://addons/godot_state_charts/atomic_state.gd" id="5_kvgob"]
[ext_resource type="Script" path="res://addons/godot_state_charts/transition.gd" id="6_ls478"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_j1xd1"]
radius = 14.0
height = 28.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c5a6p"]
radius = 223.036

[sub_resource type="Animation" id="Animation_y8dpu"]
resource_name = "Attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0666667, 0.133333, 0.2, 0.266667, 0.333333, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [24, 25, 26, 27, 28, 29, 30]
}

[sub_resource type="Animation" id="Animation_efeiq"]
resource_name = "Idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0333333, 0.133333, 0.233333, 0.366667, 0.466667, 0.566667, 0.666667, 0.766667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8]
}

[sub_resource type="Animation" id="Animation_8fou0"]
resource_name = "Move"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11, 12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_wfrx1"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_aqhcn"]
_data = {
"Attack": SubResource("Animation_y8dpu"),
"Idle": SubResource("Animation_efeiq"),
"Move": SubResource("Animation_8fou0"),
"RESET": SubResource("Animation_wfrx1")
}

[node name="Archer" type="CharacterBody2D" node_paths=PackedStringArray("state_chart", "attack_timer", "animation_player", "sprite") groups=["Enemy"]]
collision_layer = 4
collision_mask = 4
script = ExtResource("1_iig5x")
state_chart = NodePath("StateChart")
attack_timer = NodePath("AttackTimer")
animation_player = NodePath("AnimationPlayer")
sprite = NodePath("Sprite2D")
arrow = ExtResource("2_d1bf1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_j1xd1")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1, -19)
scale = Vector2(2, 2)
texture = ExtResource("3_h1gdg")
hframes = 8
vframes = 6

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_att5l")

[node name="ParallelState" type="Node" parent="StateChart"]
script = ExtResource("3_sdv2h")

[node name="Behaviour" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("4_s6b1r")
initial_state = NodePath("Idle")

[node name="Attack" type="Node" parent="StateChart/ParallelState/Behaviour"]
script = ExtResource("5_kvgob")

[node name="ToMove" type="Node" parent="StateChart/ParallelState/Behaviour/Attack"]
script = ExtResource("6_ls478")
to = NodePath("../../Move")
event = &"Move"
delay_in_seconds = "0.0"

[node name="ToIdle" type="Node" parent="StateChart/ParallelState/Behaviour/Attack"]
script = ExtResource("6_ls478")
to = NodePath("../../Idle")
event = &"Idle"
delay_in_seconds = "0.0"

[node name="Idle" type="Node" parent="StateChart/ParallelState/Behaviour"]
script = ExtResource("5_kvgob")

[node name="ToMove" type="Node" parent="StateChart/ParallelState/Behaviour/Idle"]
script = ExtResource("6_ls478")
to = NodePath("../../Move")
event = &"Move"
delay_in_seconds = "0.0"

[node name="ToAttack" type="Node" parent="StateChart/ParallelState/Behaviour/Idle"]
script = ExtResource("6_ls478")
to = NodePath("../../Attack")
event = &"Attack"
delay_in_seconds = "0.0"

[node name="Move" type="Node" parent="StateChart/ParallelState/Behaviour"]
script = ExtResource("5_kvgob")

[node name="ToIdle" type="Node" parent="StateChart/ParallelState/Behaviour/Move"]
script = ExtResource("6_ls478")
to = NodePath("../../Idle")
event = &"Idle"
delay_in_seconds = "0.0"

[node name="ToAttack" type="Node" parent="StateChart/ParallelState/Behaviour/Move"]
script = ExtResource("6_ls478")
to = NodePath("../../Attack")
event = &"Attack"
delay_in_seconds = "0.0"

[node name="Condition" type="Node" parent="StateChart/ParallelState"]
script = ExtResource("4_s6b1r")
initial_state = NodePath("Normal")

[node name="Damaged" type="Node" parent="StateChart/ParallelState/Condition"]
script = ExtResource("5_kvgob")

[node name="ToNormal" type="Node" parent="StateChart/ParallelState/Condition/Damaged"]
script = ExtResource("6_ls478")
to = NodePath("../../Normal")
event = &"Normal"
delay_in_seconds = "0.0"

[node name="ToDead" type="Node" parent="StateChart/ParallelState/Condition/Damaged"]
script = ExtResource("6_ls478")
to = NodePath("../../Dead")
event = &"Dead"
delay_in_seconds = "0.0"

[node name="Normal" type="Node" parent="StateChart/ParallelState/Condition"]
script = ExtResource("5_kvgob")

[node name="ToDamaged" type="Node" parent="StateChart/ParallelState/Condition/Normal"]
script = ExtResource("6_ls478")
to = NodePath("../../Damaged")
event = &"Damaged"
delay_in_seconds = "0.0"

[node name="Dead" type="Node" parent="StateChart/ParallelState/Condition"]
script = ExtResource("5_kvgob")

[node name="Area" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area"]
shape = SubResource("CircleShape2D_c5a6p")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_aqhcn")
}

[connection signal="state_entered" from="StateChart/ParallelState/Behaviour/Attack" to="." method="_on_attack_state_entered"]
[connection signal="state_processing" from="StateChart/ParallelState/Behaviour/Attack" to="." method="_on_attack_state_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Behaviour/Idle" to="." method="_on_idle_state_entered"]
[connection signal="state_processing" from="StateChart/ParallelState/Behaviour/Idle" to="." method="_on_idle_state_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Behaviour/Move" to="." method="_on_move_state_entered"]
[connection signal="state_processing" from="StateChart/ParallelState/Behaviour/Move" to="." method="_on_move_state_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Condition/Damaged" to="." method="_on_damaged_state_entered"]
[connection signal="state_processing" from="StateChart/ParallelState/Condition/Normal" to="." method="_on_normal_state_processing"]
[connection signal="state_entered" from="StateChart/ParallelState/Condition/Dead" to="." method="_on_dead_state_entered"]
[connection signal="body_entered" from="Area" to="." method="_on_area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_area_body_exited"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
